# zbot

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: codeql-analysis.yml
misc/: sample_config.ini
misc/ebuild/: Manifest  zbot-0.1.3.ebuild  zbot-0.1.8.ebuild  zbot-0.5.1-r1.ebuild  zbot-0.6.3.ebuild
misc/ebuild/files/: zbotd-confd-r1  zbotd-initd-r1
src/cli/: CMakeLists.txt  main  main.cpp
src/common/: CMakeLists.txt  defaultconfig.cpp  hirschberg.cpp  zconfig.cpp  zinit.cpp  zinstantsender.cpp  zlogger.cpp  zmessagehistory.cpp  zmsgbox.cpp  zstorage.cpp  ztbot.cpp  zworker.cpp  zzabbix.cpp
src/daemon/: CMakeLists.txt  main.cpp
src/include/: defaultconfig.h  hirschberg.h  zconfig.h  zinit.h  zinstantsender.h  zlogger.h  zmessagehistory.h  zmsgbox.h  zstorage.h  ztbot.h  zworker.h  zzabbix.h
